deploy: vinid/webiste-back@8a0d1edac8e8a08b6277cc20d27d3af99178f26f

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Hello! I am Federico Bianchi, a post-doctoral researcher at Bocconi University (with Prof. Dirk Hovy), Milan, Italy. I was a PhD Student at University of Milan-Bicocca (Prof. Matteo Palmonari) and a Visiting Scholar at Wright State University, Ohio, US (Prof. Pascal Hitzler).</p>
+      <p>Hello! I am Federico Bianchi, a post-doctoral researcher at Bocconi University (with Prof. Dirk Hovy), Milan, Italy.</p>
 <p>You can find my work in the main track of different AI venues (e.g., NAACL, EACL, <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>, <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://link.springer.com/chapter/10.1007/978-3-030-00671-6_4" target="_blank" rel="noopener">ISWC</a>, <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">RecSys</a>) and Q1 Journals (e.g., Cognitive Science, <a href="https://www.nature.com/articles/s41534-020-0248-6" target="_blank" rel="noopener">Nature PJQI</a>, <a href="http://www.semantic-web-journal.net/system/files/swj2188.pdf" target="_blank" rel="noopener">SWJ</a>) and a few things have also been featured in press or in company media outlets (see, <a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
 <a href="https://www.photonics.com/Articles/Neural_Network_Improves_Quantum_Tomography/a65552" target="_blank" rel="noopener">2</a>,
 <a href="https://www.knowledge.unibocconi.eu/notizia.php?idArt=21787" target="_blank" rel="noopener">3</a>,
