deploy: vinid/webiste-back@38dfdedfd2236aa5feb6399aded10bd273ed5baf

--- a/publication/cross-lingual-contextualized-topic-models-for-zero-shot/index.html
+++ b/publication/cross-lingual-contextualized-topic-models-for-zero-shot/index.html
@@ -781,7 +781,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 405px;">
   <div style="position: relative">
     <img src="/publication/cross-lingual-contextualized-topic-models-for-zero-shot/featured_huf56ba8851a7fe21a510543c1e95a3465_21369_720x0_resize_q75_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/pLCdAaMFLTE"><strong>Unsplash</strong></a></span>
+    <span class="article-header-caption">Our Model</span>
   </div>
 </div>
 
