--- a/publication/pre-training-is-a-hot-topic/index.html
+++ b/publication/pre-training-is-a-hot-topic/index.html
@@ -760,10 +760,10 @@
 </div>
 
 
-<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 480px;">
+<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 405px;">
   <div style="position: relative">
-    <img src="/publication/pre-training-is-a-hot-topic/featured_hu3d03a01dcc18bc5be0e67db3d8d209a6_312700_720x0_resize_q75_lanczos.jpg" alt="" class="featured-image">
-    <span class="article-header-caption">Image credit: <a href="https://unsplash.com/photos/w7ZyuGYNpRQ"><strong>Unsplash</strong></a></span>
+    <img src="/publication/pre-training-is-a-hot-topic/featured_hu4fc7077454cc70f595c92a39359b4354_23725_720x0_resize_q75_lanczos.jpg" alt="" class="featured-image">
+    <span class="article-header-caption">Our Model</span>
   </div>
 </div>
 
