deploy: vinid/webiste-back@b1a1c1d2d00101e5c026ba9134280b447e014cdc

--- a/event/index.html
+++ b/event/index.html
@@ -897,7 +897,7 @@
     
     <a href="/talk/learning-jax-for-great-good/"  class="summary-link">
       <div class="article-style">
-        I gave a tutorial on JAX, form simple derivatives to NLP.
+        I gave a tutorial on JAX,  the new google framework for deep learning. I have described how to compute simple derivatives and finished describing some applications in NLP.
       </div>
     </a>
     
