--- a/talk/learning-jax-for-great-good/index.html
+++ b/talk/learning-jax-for-great-good/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="I gave a tutorial on JAX, form simple derivatives to NLP." />
+  <meta name="description" content="I gave a tutorial on JAX,  the new google framework for deep learning. I have described how to compute simple derivatives and finished describing some applications in NLP." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://federicobianchi.io/talk/learning-jax-for-great-good/" />
@@ -291,7 +291,7 @@
   <meta property="og:site_name" content="Federico Bianchi" />
   <meta property="og:url" content="https://federicobianchi.io/talk/learning-jax-for-great-good/" />
   <meta property="og:title" content="Learning JAX for Great Good | Federico Bianchi" />
-  <meta property="og:description" content="I gave a tutorial on JAX, form simple derivatives to NLP." /><meta property="og:image" content="https://federicobianchi.io/talk/learning-jax-for-great-good/featured.png" />
+  <meta property="og:description" content="I gave a tutorial on JAX,  the new google framework for deep learning. I have described how to compute simple derivatives and finished describing some applications in NLP." /><meta property="og:image" content="https://federicobianchi.io/talk/learning-jax-for-great-good/featured.png" />
     <meta property="twitter:image" content="https://federicobianchi.io/talk/learning-jax-for-great-good/featured.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -341,7 +341,7 @@
     "name": "Federico Bianchi"
   },
   
-  "description": "I gave a tutorial on JAX, form simple derivatives to NLP."
+  "description": "I gave a tutorial on JAX,  the new google framework for deep learning. I have described how to compute simple derivatives and finished describing some applications in NLP."
 }
 </script>
 
