deploy: vinid/webiste-back@28f9c59a98c99c0667314b6e623c98e8225d24d8

--- a/publication/bertective/index.html
+++ b/publication/bertective/index.html
@@ -1058,7 +1058,7 @@
       
     
     <li>
-      <a href="https://twitter.com/fb_vinid" target="_blank" rel="noopener">
+      <a href="https://twitter.com/federicobianchy" target="_blank" rel="noopener">
         <i class="fab fa-twitter"></i>
       </a>
     </li>
