--- a/publication/feel-it/index.html
+++ b/publication/feel-it/index.html
@@ -818,8 +818,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://aclanthology.org/2021.wassa-1.8.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
