--- a/publication/gap-between-understanding-adoption/index.html
+++ b/publication/gap-between-understanding-adoption/index.html
@@ -828,8 +828,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://aclanthology.org/2021.findings-acl.340.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
