--- a/publication/index.html
+++ b/publication/index.html
@@ -920,8 +920,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://aclanthology.org/2021.findings-acl.340.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -1559,8 +1565,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://aclanthology.org/2021.wassa-1.8.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
