deploy: vinid/webiste-back@8a2a450e3aad2572ca49389446898d8a5bb6e93f

--- a/index.html
+++ b/index.html
@@ -907,9 +907,9 @@
 
     <div class="article-style">
       <p>Hello! I am Federico Bianchi, soon to be post-doctoral researcher at Stanford University (starting July 1st 2022) with
-<a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>). I was a post-doctoral researcher at Bocconi University
+<a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I was a post-doctoral researcher at Bocconi University
 (with <a href="http://dirkhovy.com/" target="_blank" rel="noopener">Prof. Dirk Hovy</a>), Milan, Italy. I did my PhD at University of Milano Bicocca
-(with <a href="https://scholar.google.it/citations?user=QmrLvqYAAAAJ&amp;hl=en" target="_blank" rel="noopener">Prof. Matteo Palmonari</a>)</p>
+(with <a href="https://scholar.google.it/citations?user=QmrLvqYAAAAJ&amp;hl=en" target="_blank" rel="noopener">Prof. Matteo Palmonari</a>).</p>
 <p>You can find my work in the main track of different AI venues (e.g.,
 <a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>, <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>,
