deploy: vinid/webiste-back@a1ba71479bb38ffdb152bf06e9b683cb0175d9e7

--- a/index.html
+++ b/index.html
@@ -802,8 +802,8 @@
 
         
         <h3>
-          <a href="https://www.unibocconi.it" target="_blank" rel="noopener">
-          <span>Bocconi University</span>
+          <a href="https://profiles.stanford.edu/federico-bianchi" target="_blank" rel="noopener">
+          <span>Stanford University</span>
           </a>
         </h3>
         
@@ -906,7 +906,7 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Hello! I am Federico Bianchi, soon to be post-doctoral researcher at Stanford University (starting July 1st 2022) with
+      <p>Hello! I am Federico Bianchi, I am a post-doctoral researcher at Stanford University with
 <a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I was a post-doctoral researcher at Bocconi University
 (with <a href="http://dirkhovy.com/" target="_blank" rel="noopener">Prof. Dirk Hovy</a>), Milan, Italy. I did my PhD at University of Milano Bicocca
 (with <a href="https://scholar.google.it/citations?user=QmrLvqYAAAAJ&amp;hl=en" target="_blank" rel="noopener">Prof. Matteo Palmonari</a>).</p>
