deploy: vinid/webiste-back@e991051a8aada8d6313ea077420b44148457fd53

--- a/publication/pipelines-social-bias-testing-language-models/index.html
+++ b/publication/pipelines-social-bias-testing-language-models/index.html
@@ -1072,7 +1072,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://federicobianchi.io">Federico Bianchi</a></h5>
-      <h6 class="card-subtitle">Postdoctoral Researcher</h6>
+      <h6 class="card-subtitle">Postdoctoral Researcher at Stanford University</h6>
       <p class="card-text">My research interests include meaning in natural language and programming languages.</p>
       <ul class="network-icon" aria-hidden="true">
   
@@ -1088,8 +1088,8 @@
       
     
     <li>
-      <a href="/#contact" >
-        <i class="fas fa-envelope"></i>
+      <a href="https://profiles.stanford.edu/federico-bianchi" target="_blank" rel="noopener">
+        <i class="fas fa-chalkboard"></i>
       </a>
     </li>
   
