--- a/publication/xlmemo-multilingual-emotion-prediction/index.html
+++ b/publication/xlmemo-multilingual-emotion-prediction/index.html
@@ -1114,7 +1114,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://federicobianchi.io">Federico Bianchi</a></h5>
       <h6 class="card-subtitle">Postdoctoral Researcher at Stanford University</h6>
-      <p class="card-text">My research interests include meaning in natural language and programming languages.</p>
+      <p class="card-text">My research interests include developing and understanding large language (and vision) models and recommender systems.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
