--- a/index.html
+++ b/index.html
@@ -1705,7 +1705,7 @@ You should consider joining, if you can. While I haven&rsquo;t formally <a href=
     
     <a href="/post/fashion-clip/"  class="summary-link">
       <div class="article-style">
-        This article describes how to implement CLIP to support a domain-specific fashion use case
+        This is a short blog post describing FashionCLIP. If you are a data scientist you probably have to deal with both images and text. However, your data will be very specific to your domain, and standard models might not work well. This post explains how domain-specific vision and language models can be used in a domain-specific setting and why using them can be a promising way to create a search engine or a (zero-shot) classifier.
       </div>
     </a>
     
