--- a/index.html
+++ b/index.html
@@ -1009,16 +1009,16 @@
 
     <div class="article-style">
       <p>Hello! I am Federico Bianchi, I am a post-doctoral researcher at Stanford University with
-<a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>.</p>
-<p>I am passionate about working across the entire spectrum of AI and more recent generative AI,
-considering all the phases from model development and deployment, to model understanding and safety evaluation.
-I love the multifaceted nature of the field, that allows me to engage in tasks ranging
-from constructing foundation models (see for example, (<a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
+<a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I am passionate about working across the entire spectrum of AI and more recent generative AI.</p>
+<p>I love the multifaceted nature of the field; it allows me to engage in different tasks and contribute to the development:</p>
+<ul>
+<li>from constructing foundation models (see for example, (<a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
 <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">LLaMA and LoRA</a>,
-<a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>) to gaining
-deep insights into their inner workings (see for example, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>).
-Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (see for example, <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>.
-By actively participating in each stage of the process, I aim to contribute to the advancement and responsible use of generative AI technology.</p>
+<a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>)</li>
+<li>to gaining deep insights into their inner workings (see for example, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>).</li>
+<li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (see for example, <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>.
+By actively participating in each stage of the process, I aim to contribute to the advancement and responsible use of generative AI technology.</li>
+</ul>
 <p>You can find my work in the main track of different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">ICLR</a>,
 <a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>)
