--- a/index.html
+++ b/index.html
@@ -1019,18 +1019,19 @@
 <li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>).
 By actively participating in each stage of the process, I aim to contribute to the advancement and responsible use of generative AI technology.</li>
 </ul>
-<p>You can find my work in the main track of different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
+<p>My work appeared in different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">ICLR</a>,
-<a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>)
-and Journals (e.g., <a href="https://onlinelibrary.wiley.com/doi/10.1111/cogs.12963" target="_blank" rel="noopener">Cognitive Science</a>,
-<a href="https://www.nature.com/articles/s41534-020-0248-6" target="_blank" rel="noopener">Nature PJQI</a>)
-and my work as also been featured in press or in company media outlets
+<a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>).
+and it has as also been featured in press or in company media outlets
 (see, <a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
 <a href="https://www.photonics.com/Articles/Neural_Network_Improves_Quantum_Tomography/a65552" target="_blank" rel="noopener">2</a>,
 <a href="https://www.knowledge.unibocconi.eu/notizia.php?idArt=21787" target="_blank" rel="noopener">3</a>,
 <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">4</a>).</p>
-<p>I recently joined the <a href="https://www.givingwhatwecan.org/" target="_blank" rel="noopener">Giving What We Can</a> initiative and donate monthly;
-You should consider joining, if you can. While I haven&rsquo;t formally <a href="https://www.givingwhatwecan.org/pledge" target="_blank" rel="noopener">pledged</a> yet, I hope to be able to do so soon.</p>
+<ul>
+<li>I often collaborate with industry partners (e.g., <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">Coveo</a>, <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">OuterBounds</a>.</li>
+<li>My GitHub projects have collected many stars over the past few years (e.g., <a href="https://github.com/MilaNLProc/contextualized-topic-models/" target="_blank" rel="noopener">Contextualized Topic Models</a>, <a href="https://github.com/RecList/reclist" target="_blank" rel="noopener">RecList</a>, <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>)</li>
+</ul>
+<p>I recently joined the <a href="https://www.givingwhatwecan.org/" target="_blank" rel="noopener">Giving What We Can</a> initiative and donate monthly.</p>
 
     </div>
 
