deploy: vinid/webiste-back@aa30273a01d6055100520eb66288265ab143de5f

--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ and it has as also been featured in press or in company media outlets
 <a href="https://www.knowledge.unibocconi.eu/notizia.php?idArt=21787" target="_blank" rel="noopener">3</a>,
 <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">4</a>).</p>
 <ul>
-<li>I often collaborate with industry partners (e.g., <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">Coveo</a>, <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">OuterBounds</a>.</li>
+<li>I often collaborate with industry folks (e.g., <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">Coveo</a>, <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">OuterBounds</a>).</li>
 <li>My GitHub projects have collected many stars over the past few years (e.g., <a href="https://github.com/MilaNLProc/contextualized-topic-models/" target="_blank" rel="noopener">Contextualized Topic Models</a>, <a href="https://github.com/RecList/reclist" target="_blank" rel="noopener">RecList</a>, <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>)</li>
 </ul>
 <p>I recently joined the <a href="https://www.givingwhatwecan.org/" target="_blank" rel="noopener">Giving What We Can</a> initiative and donate monthly.</p>
