--- a/index.html
+++ b/index.html
@@ -1012,8 +1012,8 @@
 <a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I am passionate about working across the entire spectrum of AI and more recent generative AI.</p>
 <p>I love the multifaceted nature of the field; it allows me to engage in different tasks and contribute to the development:</p>
 <ul>
-<li>From constructing foundation models (e.g., <a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
-<a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">LLaMA and LoRA</a>,
+<li>From building and using foundation models (e.g., <a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
+<a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">LLaMA and LoRA</a>, <a href="https://outerbounds.com/blog/retrieval-augmented-generation/" target="_blank" rel="noopener">RAGs</a>,
 <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>);</li>
 <li>To gaining deep insights into their inner workings (e.g., <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>);</li>
 <li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>).
