deploy: vinid/webiste-back@62c84b5d560f61a1081e187a3d43db5e71de61f8

--- a/index.html
+++ b/index.html
@@ -1014,9 +1014,8 @@
 <ul>
 <li>From building and using foundation models (e.g., <a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
 <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">LLaMA and LoRA</a>, <a href="https://outerbounds.com/blog/retrieval-augmented-generation/" target="_blank" rel="noopener">RAGs</a>,
-<a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>);</li>
-<li>To gaining deep insights into their inner workings (e.g., <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>);</li>
-<li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>).
+<a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>, <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">PLIP</a>) to gaining deep insights into their inner workings (e.g., <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>);</li>
+<li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>, <a href="https://arxiv.org/abs/2309.07875" target="_blank" rel="noopener">Safety-Tuned LLaMAs</a>).
 By actively participating in each stage of the process, I aim to contribute to the advancement and responsible use of generative AI technology.</li>
 </ul>
 <p>My work appeared in different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
