deploy: vinid/webiste-back@7afec5994eb060c8f4f691a52a456422f3de5f72

--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@ By actively participating in each stage of the process, I aim to contribute to t
 </ul>
 <p>My work appeared in different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">ICLR</a>,
-<a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>).
+<a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>, <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">Nature Medicine</a>).
 and it has as also been featured in press or in company media outlets
 (see, <a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
 <a href="https://www.photonics.com/Articles/Neural_Network_Improves_Quantum_Tomography/a65552" target="_blank" rel="noopener">2</a>,
