deploy: vinid/webiste-back@b55c43344a524ed927701d2db6496eadf14e8d10

--- a/index.html
+++ b/index.html
@@ -1008,28 +1008,24 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>Hello! I am Federico Bianchi, I am a post-doctoral researcher at Stanford University with
+      <p>Hello! I am Federico Bianchi, I am a post-doctoral researcher at Stanford University working with
 <a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I am passionate about working across the entire spectrum of AI and more recent generative AI.</p>
 <p>I love the multifaceted nature of the field; it allows me to engage in different tasks and contribute to the development:</p>
 <ul>
 <li>From building and using foundation models (e.g., <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">PLIP</a>, <a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
 <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">LLaMA and LoRA</a>, <a href="https://outerbounds.com/blog/retrieval-augmented-generation/" target="_blank" rel="noopener">RAGs</a>,
 <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>) to gaining deep insights into their inner workings (e.g., <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>);</li>
-<li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>, <a href="https://arxiv.org/abs/2309.07875" target="_blank" rel="noopener">Safety-Tuned LLaMAs</a>).
-By actively participating in each stage of the process, I aim to contribute to the advancement and responsible use of generative AI technology.</li>
+<li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>, <a href="https://arxiv.org/abs/2309.07875" target="_blank" rel="noopener">Safety-Tuned LLaMAs</a>).</li>
 </ul>
 <p>My work appeared in different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">ICLR</a>,
 <a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>, <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">Nature Medicine</a>).
-and it has as also been featured in press or in company media outlets
+and it has as also been featured in press (<a href="https://www.nature.com/articles/d41586-024-00674-9" target="_blank" rel="noopener">Nature</a>, <a href="https://www.nature.com/articles/s42256-023-00631-7" target="_blank" rel="noopener">Nature Machine Intelligence</a>, <a href="https://www.washingtonpost.com/technology/interactive/2023/ai-generated-images-bias-racism-sexism-stereotypes/" target="_blank" rel="noopener">Washington Post</a>) or in company media outlets
 (see, <a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
 <a href="https://www.photonics.com/Articles/Neural_Network_Improves_Quantum_Tomography/a65552" target="_blank" rel="noopener">2</a>,
 <a href="https://www.knowledge.unibocconi.eu/notizia.php?idArt=21787" target="_blank" rel="noopener">3</a>,
 <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">4</a>).</p>
-<ul>
-<li>I often collaborate with industry folks (e.g., <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">Coveo</a>, <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">OuterBounds</a>).</li>
-<li>My GitHub projects have collected many stars over the past few years (e.g., <a href="https://github.com/MilaNLProc/contextualized-topic-models/" target="_blank" rel="noopener">Contextualized Topic Models</a>, <a href="https://github.com/RecList/reclist" target="_blank" rel="noopener">RecList</a>, <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>)</li>
-</ul>
+<p>My GitHub projects have collected thousands stars over the past few years (e.g., <a href="https://github.com/MilaNLProc/contextualized-topic-models/" target="_blank" rel="noopener">Contextualized Topic Models</a>, <a href="https://github.com/RecList/reclist" target="_blank" rel="noopener">RecList</a>, <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>)</p>
 <p>I recently joined the <a href="https://www.givingwhatwecan.org/" target="_blank" rel="noopener">Giving What We Can</a> initiative and donate monthly.</p>
 
     </div>
