--- a/index.html
+++ b/index.html
@@ -1009,8 +1009,7 @@
 
     <div class="article-style">
       <p>Hello! I am Federico Bianchi, I am a post-doctoral researcher at Stanford University working with
-<a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I am passionate about working across the entire spectrum of AI and more recent generative AI.</p>
-<p>I love the multifaceted nature of the field; it allows me to engage in different tasks and contribute to the development:</p>
+<a href="https://web.stanford.edu/~jurafsky/" target="_blank" rel="noopener">Prof. Dan Jurafsky</a>. I am passionate about working across the entire spectrum of AI and more recent generative AI:</p>
 <ul>
 <li>From building and using foundation models (e.g., <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">PLIP</a>, <a href="https://outerbounds.com/blog/custom-llm-tuning/" target="_blank" rel="noopener">Instruction Tuning</a>,
 <a href="https://outerbounds.com/blog/llm-tuning-metaflow/" target="_blank" rel="noopener">LLaMA and LoRA</a>, <a href="https://outerbounds.com/blog/retrieval-augmented-generation/" target="_blank" rel="noopener">RAGs</a>,
@@ -1020,7 +1019,7 @@
 <p>My work appeared in different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">ICLR</a>,
 <a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>, <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">Nature Medicine</a>).
-and it has as also been featured in press (<a href="https://www.nature.com/articles/d41586-024-00674-9" target="_blank" rel="noopener">Nature</a>, <a href="https://www.nature.com/articles/s42256-023-00631-7" target="_blank" rel="noopener">Nature Machine Intelligence</a>, <a href="https://www.washingtonpost.com/technology/interactive/2023/ai-generated-images-bias-racism-sexism-stereotypes/" target="_blank" rel="noopener">Washington Post</a>) or in company media outlets
+and it has as also been featured in press (<a href="https://www.nature.com/articles/d41586-024-00674-9" target="_blank" rel="noopener">Nature</a>, <a href="https://www.nature.com/articles/s42256-023-00631-7" target="_blank" rel="noopener">Nature Machine Intelligence</a>, <a href="https://www.washingtonpost.com/technology/interactive/2023/ai-generated-images-bias-racism-sexism-stereotypes/" target="_blank" rel="noopener">Washington Post</a>) or in company/university media outlets
 (see, <a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
 <a href="https://www.photonics.com/Articles/Neural_Network_Improves_Quantum_Tomography/a65552" target="_blank" rel="noopener">2</a>,
 <a href="https://www.knowledge.unibocconi.eu/notizia.php?idArt=21787" target="_blank" rel="noopener">3</a>,
