--- a/index.html
+++ b/index.html
@@ -1016,11 +1016,11 @@
 <a href="https://huggingface.co/patrickjohncyh/fashion-clip" target="_blank" rel="noopener">FashionCLIP</a>) to gaining deep insights into their inner workings (e.g., <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">Compositionality in Vision and Language</a>);</li>
 <li>Moreover, I recognize the importance of safety and ethical implications of Generative AI, making it an integral part of my work (e.g., <a href="https://arxiv.org/abs/2211.03759" target="_blank" rel="noopener">DallE And Stable Diffusion</a>, <a href="https://arxiv.org/abs/2309.07875" target="_blank" rel="noopener">Safety-Tuned LLaMAs</a>).</li>
 </ul>
-<p>My work appeared in different AI venues (e.g., <a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
+<p>My work appeared in different AI venues (<a href="https://www.aaai.org/ojs/index.php/AAAI/article/view/4594/4472" target="_blank" rel="noopener">AAAI</a>,
 <a href="https://www.aclweb.org/anthology/2020.acl-main.154.pdf" target="_blank" rel="noopener">ACL</a>, <a href="https://openreview.net/forum?id=KRLUvxh8uaX" target="_blank" rel="noopener">ICLR</a>,
 <a href="https://aclanthology.org/2021.naacl-main.348/" target="_blank" rel="noopener">NAACL</a>, <a href="https://aclanthology.org/2021.eacl-main.143/" target="_blank" rel="noopener">EACL</a>, <a href="https://www.nature.com/articles/s41591-023-02504-3" target="_blank" rel="noopener">Nature Medicine</a>).
 and it has as also been featured in press (<a href="https://www.nature.com/articles/d41586-024-00674-9" target="_blank" rel="noopener">Nature</a>, <a href="https://www.nature.com/articles/s42256-023-00631-7" target="_blank" rel="noopener">Nature Machine Intelligence</a>, <a href="https://www.washingtonpost.com/technology/interactive/2023/ai-generated-images-bias-racism-sexism-stereotypes/" target="_blank" rel="noopener">Washington Post</a>) or in company/university media outlets
-(see, <a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
+(<a href="https://phys.org/news/2020-02-machine-quantum-optics.html" target="_blank" rel="noopener">1</a>,
 <a href="https://www.photonics.com/Articles/Neural_Network_Improves_Quantum_Tomography/a65552" target="_blank" rel="noopener">2</a>,
 <a href="https://www.knowledge.unibocconi.eu/notizia.php?idArt=21787" target="_blank" rel="noopener">3</a>,
 <a href="https://blog.coveo.com/multi-brand-personalization-in-ecommerce/" target="_blank" rel="noopener">4</a>).</p>
